<resources>
    <string name="app_name">Data Collector</string>

    <!--Initial Screen-->
    <string name="data_collector">Data Collector</string>
    <string name="select_module">Select Module</string>
    <string name="init_se">Sensor\nEstimator</string>
    <string name="wifi">WiFi Scanner</string>
    <string name="ble">BLE Scanner</string>
    <string name="select_act">Select Action</string>
    <string name="start_module">Start Module</string>
    <string name="sender">Send data\nto server</string>

    <!--Sensor Estimation Screen-->
    <string name="se">Sensor Estimator</string>
    <string name="activity">Select Activity</string>
    <string name="walk">Walk</string>
    <string name="run">Run</string>
    <string name="sit_down">Sit Down</string>
    <string name="stand_up">Stand Up</string>
    <string name="put">Put</string>


    <string name="detail">Select Detail</string>
    <string name="pocket">POCKET</string>
    <string name="bag">BAG</string>
    <string name="hand">HAND</string>
    <string name="use">USE</string>

    <string name="btnStart">START</string>
    <string name="btnStop">STOP</string>
    <string name="btnGoToHome">Go To Home</string>
    <string name="btnMakeFile">Make File</string>
    <string name="btnRefresh">Refresh</string>

    <string name="str_acc_x"> Accelerometer_X: </string>
    <string name="str_acc_y"> Accelerometer_Y: </string>
    <string name="str_acc_z"> Accelerometer_Z: </string>

    <string name="str_gyro_x"> Gyroscope_X: </string>
    <string name="str_gyro_y"> Gyroscope_Y: </string>
    <string name="str_gyro_z"> Gyroscope_Z: </string>

    <string name="str_ori_x"> Orientation_X: </string>
    <string name="str_ori_y"> Orientation_Y: </string>
    <string name="str_ori_z"> Orientation_Z: </string>

    <string name="str_mag_x"> Magnetic_X: </string>"
    <string name="str_mag_y"> Magnetic_Y: </string>"
    <string name="str_mag_z"> Magnetic_Z: </string>"

    <string name="text_estimation_number">Estimation Number : </string>
    <string name="text_remove_data">Remove\nData Array</string>

    <string name="info_act">Exp Act</string>
    <string name="info_case">Exp Case</string>
    <string name="info_cnt">Exp Count</string>

    <!-- WiFi Scanner -->
    <string name="wifi_title">WiFi Scanner</string>
    <string name="wifi_start_scan">Start</string>
    <string name="wifi_stop_scan">Stop</string>
    <string name="wifi_make_file">Make\nFile</string>
    <string name="wifi_send_data">send\ndata</string>
    <string name="wifi_remove_array">remove\narray</string>
    <string name="wifi_go_home">go to\nhome</string>
    <string name="wifi_text_line">===========================================</string>

    <!--Case Input Controller    -->
    <string name="input_case">Case : </string>
    <string name="input_exp_cnt">Count : </string>
    <string name="input_exp_delay">Delay : </string>
    <string name="OK">OK</string>
</resources>
