<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".WiFiScanner">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:gravity="center"
        android:text="@string/wifi_title"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/line1"
        android:layout_width="0dp"
        android:layout_height="5dp"
        android:background="#FF0000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_name" />

    <LinearLayout
        android:id="@+id/linear_btn_wifi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line1">

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="#000000"/>

        <Button
            android:id="@+id/btn_start_scan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="2"
            android:background="#FF5722"
            android:text="@string/wifi_start_scan"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="@id/line2"
            app:layout_constraintTop_toBottomOf="@id/line2" />

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="#000000"/>

        <Button
            android:id="@+id/btn_stop_scan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="#FF5722"
            android:layout_weight="2"
            android:text="@string/wifi_stop_scan"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="@id/line2"
            app:layout_constraintTop_toBottomOf="@id/line2" />

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="#000000"/>

    </LinearLayout>

    <View
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_margin="5dp"
        android:background="#FF0000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_btn_wifi" />

    <LinearLayout
        android:id="@+id/wifi_scanner_control"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line3">

        <Button
            android:id="@+id/btn_wifi_make_file"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="#0000FF"
            android:text="@string/wifi_make_file"
            android:textColor="#FFFFFF"/>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="#000000"/>

        <Button
            android:id="@+id/btn_wifi_send_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="#0000FF"
            android:text="@string/wifi_send_data"
            android:textColor="#FFFFFF"/>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="#000000"/>

        <Button
            android:id="@+id/btn_wifi_go_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="#0000FF"
            android:text="@string/wifi_go_home"
            android:textColor="#FFFFFF"/>

    </LinearLayout>

    <View
        android:id="@+id/line4"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_margin="5dp"
        android:background="#FF0000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wifi_scanner_control" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@+id/line4"
        app:layout_constraintTop_toBottomOf="@+id/line4">

        <ScrollView
            android:id="@+id/wifi_scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:fillViewport="true"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/wifi_scan_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </ScrollView>
    </LinearLayout>

<!--    app:layout_constraintStart_toStartOf="@+id/line4"-->
<!--    app:layout_constraintTop_toBottomOf="@+id/line4-->

</androidx.constraintlayout.widget.ConstraintLayout>