<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".WiFiInput">

    <LinearLayout
        android:id="@+id/wifi_input_linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/app_name"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:text="@string/data_collector"
            android:textColor="@android:color/black"
            android:textSize="30sp" />

        <View
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="#FF0000" />

        <TextView
            android:id="@+id/wifi_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/wifi_title"
            android:textColor="@android:color/black"
            android:textSize="30sp" />

        <View
            android:id="@+id/line2"
            android:layout_width="wrap_content"
            android:layout_height="5dp"
            android:background="#FF0000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:background="@drawable/selector_stroke">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text_wifi_room_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" Room : "
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/edit_wifi_room_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="Room"
                    android:textSize="15sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#000000"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/text_wifi_case_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" Case : "
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/edit_case_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="Case"
                    android:textSize="15sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#000000"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/text_wifi_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" Count : "
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/edit_wifi_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="Count"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/wifi_btnOK"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/wifi_input_OK"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/OK" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
